# linstall

./: .directory  .gitignore  .gitpod.yml  .pylintrc  .style.yapf  linstall.ipy  linstall.py  pyproject.toml  readme.md  setup.cfg  upload.sh
.github/workflows/: create_pull_request.yml  lint.yml  pre-release.yml  python-package.yml  release.yml  test.yml  test_macos.yml  test_ubuntu.yml  test_windows.yml
SpaceVim/: init.toml
common/: thunderbird  zim
common/docker/: docker  docker_cn
common/firefox/: prefs.js
common/jupyter/: jupyter_notebook_config.py
common/nomachine/: nx @ home.nxs
common/rstudio-desktop/: user-settings
docs/: conf.py  index.rst  modules.rst
git/: gitconfig  gitignore
ipython/: ipython_config.py
jupyter/: jupyter_notebook_config.py
linstall/: linstall.py  main.py  utils.py
linstall/git/: gitconfig
linstall/hyper/: hyper.js
linux/: bash  cairo-dock.md  inputrc  profile
linux/antix/: bashrc.sh
linux/common/: bash  vim
linux/crontab/: aerofs.txt  btsync.txt  dropbox.txt  y570.txt
linux/git/: gitconfig  gitignore
linux/r/: Rprofile.site
linux/remmina/: 1374159627085.remmina  1377146415492.remmina  1384225519110.remmina  1403362182092.remmina  remmina.pref
linux/tcpd/: hosts.allow
nomachine/: Connection to 192.168.0.6.nxs  nx @ y570.nxs  y570-vm-mint.nxs
proxychains/: proxychains.conf
test/: Dockerfile  test_ai.py  test_desktop.py  test_dev.py  test_github.py  test_jupyter.py  test_shell.py  test_web.py  test_xinstall.py
tests/: test_ai.py  test_desktop.py  test_dev.py  test_github.py  test_ide.py  test_jupyter.py  test_network.py  test_shell.py  test_utils.py  test_virtualization.py  test_web.py
vscode/: settings.json
xinstall/: __init__.py  ai.py  bigdata.py  container.py  desktop.py  dev.py  github.py  ide.py  jupyter.py  main.py  misc.py  network.py  pdf.py  shell.py  utils.py  virtualization.py  web.py  xinstall.py
(+619 files in other folders)
