[tool.poetry]
name = "xinstall"
version = "0.30.2"
description = ""
authors = ["Benjamin Du <longendu@yahoo.com>"]

[tool.poetry.scripts]
xinstall = "xinstall:main.main"

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
distro = ">=1.5.0"
tqdm = ">=4.48.2"
findspark = ">=1.4.2"
requests = ">=2.25.0"
packaging = ">=20.4"
GitPython = ">=3.1.11"
pandas = ">=1.0.0"
pyarrow = ">=2.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=3.0"
pylint = ">=2.4.4"
pytype = { version = ">=2020.08.10", python = "<3.9" }
yapf = ">=0.30.0"
coverage = ">=5.3"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
